# PersonalApi-3/src/controllers/department.js
@@ -9,6 +9,19 @@ const Personnel = require("../models/personnel");
 
 module.exports = {
   list: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'List Department'
+        #swagger.description = `
+            You can send query with endpoint for filter[], search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
     //! data
     const data = await res.getModelList(Department);
 
@@ -21,6 +34,10 @@ module.exports = {
   },
 
   create: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Create Department'
+    */
     const data = await Department.create(req.body);
     res.status(201).send({
       error: false,
@@ -29,6 +46,10 @@ module.exports = {
   },
 
   read: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Read Single Department'
+    */
     const data = await Department.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -38,6 +59,10 @@ module.exports = {
   },
 
   update: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Update Department'
+    */
     //! Does it perform update validation by default?
     const data = await Department.updateOne({ _id: req.params.id }, req.body, {
       runValidators: true,
@@ -51,6 +76,10 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Delete Department'
+    */
     const data = await Department.deleteOne({ _id: req.params.id });
     res.status(data.deletedCount ? 204 : 404).send({
       error: !data.deletedCount,
@@ -59,6 +88,10 @@ module.exports = {
   },
 
   personnels: async (req, res) => {
+    /*
+        #swagger.tags = ['Departments']
+        #swagger.summary = 'Filter Department'
+    */
     //! data
     const filter = { departmentId: req.params.id };
     const data = await res.getModelList(Personnel, filter, "departmentId");
