# PersonalApi-3/src/controllers/personnel.js
@@ -8,6 +8,21 @@ const passwordEncrypt = require("../helpers/passwordEncrypt");
 
 module.exports = {
   list: async (req, res) => {
+
+    /*
+        #swagger.tags = ['Personnels']
+        #swagger.summary = 'List Personnels'
+        #swagger.description = `
+            You can send query with endpoint for filter[], search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
+
     //! data
     const data = await res.getModelList(Personnel, {}, "departmentId");
 
@@ -22,6 +37,10 @@ module.exports = {
   },
 
   create: async (req, res) => {
+    /*
+        #swagger.tags = ['Personnels']
+        #swagger.summary = 'Create Personnel'
+    */
     //! sistemde bir admin olacaksa ve db de admin önceden tanımlanmışsa
     //* const isFirstAccount = (await Personnel.countDocuments()) === 0;
     //* req.body.isAdmin = isFirstAccount ? true : false;
@@ -50,6 +69,10 @@ module.exports = {
   },
 
   read: async (req, res) => {
+    /*
+        #swagger.tags = ['Personnels']
+        #swagger.summary = 'Read Single Personnel'
+    */
     const data = await Personnel.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -59,6 +82,10 @@ module.exports = {
   },
 
   update: async (req, res) => {
+    /*
+        #swagger.tags = ['Personnels']
+        #swagger.summary = 'Update Personnel'
+    */
     //! isLead Control:
     const isLead = req.body.isLead || false;
 
@@ -87,6 +114,10 @@ module.exports = {
   },
   //! Task:team lead silinirse
   delete: async (req, res) => {
+    /*
+        #swagger.tags = ['Personnels']
+        #swagger.summary = 'Delete Personnel'
+    */
     const data = await Personnel.deleteOne({ _id: req.params.id });
 
     res.status(data.deletedCount ? 204 : 404).send({
